Quito logs